vetter-core/tests/snapshots/curl_render_snapshot__embedded_ansi_header_ansi.snap
---
source: vetter-core/tests/curl_render_snapshot.rs
expression: out
---
 vet  \e[1mcurl\e[0m
\e[90m ─────────────────────────────────────────────────────────────────
\e[0m \e[1m\e[32mGET\e[0m  \e[4m\e[36mhttps://example.test/\e[0m
   \e[94mX-Evil: \e[0mbefore<U+001B>[2J<U+001B>[Hmid<U+001B>[31mafter<U+000D>rtail
   \e[94mX-Bidi: \e[0mpath/<U+202E>gpj.exe
\e[90m ─────────────────────────────────────────────────────────────────
\e[0m   \e[1mRisk signals: \e[0m\e[33mnone\e[0m
   \e[1mMatch:        \e[0m\e[33mno rule\e[0m
