vetter-core/tests/snapshots/curl_render_snapshot__embedded_ansi_header_plain.snap
---
source: vetter-core/tests/curl_render_snapshot.rs
expression: out
---
 vet  curl
 ─────────────────────────────────────────────────────────────────
 GET  https://example.test/
   X-Evil: before<U+001B>[2J<U+001B>[Hmid<U+001B>[31mafter␍rtail
   X-Bidi: path/<U+202E>gpj.exe
 ─────────────────────────────────────────────────────────────────
   Risk signals: none
   Match:        no rule
