vetter-core/tests/snapshots/curl_render_snapshot__insecure_ansi.snap
---
source: vetter-core/tests/curl_render_snapshot.rs
expression: render_ansi(&p)
---
 vet  \e[1mcurl\e[0m
\e[90m ─────────────────────────────────────────────────────────────────
\e[0m \e[1m\e[32mGET\e[0m  \e[4m\e[36mhttps://self-signed.example.test/\e[0m  \e[1m\e[31m[\e[0m\e[1m\e[31minsecure: -k\e[0m\e[1m\e[31m]\e[0m
\e[90m ─────────────────────────────────────────────────────────────────
\e[0m   \e[1mRisk signals: \e[0m\e[33minsecure-flag, insecure-tls\e[0m
   \e[1mMatch:        \e[0m\e[33mno rule\e[0m
