vetter-core/tests/snapshots/curl_render_snapshot__output_file_ansi.snap
---
source: vetter-core/tests/curl_render_snapshot.rs
expression: render_ansi(&p)
---
 vet  \e[1mcurl\e[0m
\e[90m ─────────────────────────────────────────────────────────────────
\e[0m \e[1m\e[32mGET\e[0m  \e[4m\e[36mhttps://example.test/data.json\e[0m
   \e[94mFile write → /tmp/out.json\e[0m
\e[90m ─────────────────────────────────────────────────────────────────
\e[0m   \e[1mRisk signals: \e[0m\e[33mnone\e[0m
   \e[1mMatch:        \e[0m\e[33mno rule\e[0m
