vetter-core/tests/snapshots/curl_render_snapshot__output_file_plain.snap
---
source: vetter-core/tests/curl_render_snapshot.rs
expression: render_plain(&p)
---
 vet  curl
 ─────────────────────────────────────────────────────────────────
 GET  https://example.test/data.json
   File write → /tmp/out.json
 ─────────────────────────────────────────────────────────────────
   Risk signals: none
   Match:        no rule
