vetter-core/tests/snapshots/curl_render_snapshot__post_json_data_plain.snap
---
source: vetter-core/tests/curl_render_snapshot.rs
expression: render_plain(&p)
---
 vet  curl
 ─────────────────────────────────────────────────────────────────
 POST  https://api.example.test/v1/widgets
   Content-Type: ••••json    ← redacted, len 16
 ─────────────────────────────────────────────────────────────────
   Body  (application/json, 9 B)
   {"k":"v"}
 ─────────────────────────────────────────────────────────────────
   Risk signals: write-method
   Match:        no rule
